19-kubernetes/12_webhook/4_webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validating-webhook
webhooks:
- name: test.example.com
  failurePolicy: Fail
  clientConfig:
    service:
      name: admission-controller
      namespace: default
      path: /validate/deployments
      port: 8001
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURPRENDQWlDZ0F3SUJBZ0lVQVNzd0J5YXRaTTBCdWg2ZDNzUS96ZXFzRVpVd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0Z6RVZNQk1HQTFVRUF3d01ZV1J0YVhOemFXOXVYMk5oTUNBWERUSXhNRFl4T0RFMU5Ea3dPRm9ZRHpJeQpPVFV3TkRBek1UVTBPVEE0V2pBck1Ta3dKd1lEVlFRRERDQmhaRzFwYzNOcGIyNHRZMjl1ZEhKdmJHeGxjaTVrClpXWmhkV3gwTG5OMll6Q0NBU0l3RFFZSktvWklodmNOQVFFQkJRQURnZ0VQQURDQ0FRb0NnZ0VCQUxIaThYYm0KMmJpWE1TK3hpM3FhcHh4RHdJQ201YXdDNm5HcFk2ZFY4V1VheW40Sm1sN3lSTTJMdVJjQ0lVZE1FZVJUTTdnUApGanVMWm9CckZCY2 [...]
  rules:
  - apiGroups: ["apps"]
    resources:
    - "deployments"
    apiVersions:
    - "*"
    operations:
    - CREATE
  sideEffects: None
  admissionReviewVersions: ["v1"]
